# WooCommerceSyncOld2

./: README.md  license.txt  pyproject.toml  readme.txt  requirements.txt
.github/workflows/: ci.yml
woocommerce_sync/: api.py  hooks.py  item_sync.py  modules.txt  utils.py  woo_requests.py
woocommerce_sync/fixtures/: custom_field.json
woocommerce_sync/woocommerce_sync/doctype/woocommerce_item/: test_woocommerce_item.py  woocommerce_item.js  woocommerce_item.json  woocommerce_item.py
woocommerce_sync/woocommerce_sync/doctype/woocommerce_log/: test_woocommerce_log.js  test_woocommerce_log.py  woocommerce_log.js  woocommerce_log.json  woocommerce_log.py  woocommerce_log_list.js
woocommerce_sync/woocommerce_sync/doctype/woocommerce_sync/: test_woocommerce_sync.py  woocommerce_sync.js  woocommerce_sync.json  woocommerce_sync.py
